--- a/TelefonRehberi/appsettings.json
+++ b/TelefonRehberi/appsettings.json
@@ -1,4 +1,7 @@
-{ 
+{
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "Server=127.0.0.1;Port=5432;Database=TelefonRehberi;User Id=postgres;Password=Sd635241;"
+  },
   "TokenOptions": {
     "Audience": "www.engin.com",
     "Issuer": "www.engin.com",
