comment add , get user comment , grouping comments comment delete , update , forgot password , send grid mail  , account page design

--- a/TelefonRehberi/appsettings.json
+++ b/TelefonRehberi/appsettings.json
@@ -14,6 +14,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SendGridAPIKey": "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",
+  "AppUrl": "https://localhost:44378",
+  "AppUrlReact": "http://localhost:3000",
+
   "frontend_url": "http://localhost:3000",
   "AllowedHosts": "*"
 }
