--- a/TelefonRehberi.DataAccess/PhoneContact.DataAccess.csproj
+++ b/TelefonRehberi.DataAccess/PhoneContact.DataAccess.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TelefonRehberi.Core\TelefonRehberi.Core.csproj" />
-    <ProjectReference Include="..\TelefonRehberi.Entities\TelefonRehberi.Entities.csproj" />
+    <ProjectReference Include="..\TelefonRehberi.Core\PhoneContact.Core.csproj" />
+    <ProjectReference Include="..\TelefonRehberi.Entities\PhoneContact.Entities.csproj" />
   </ItemGroup>
 
 </Project>
